--- a/tasks.toml
+++ b/tasks.toml
@@ -9,19 +9,11 @@
   id = "gen"
   description = "Generate everything"
   type = "short"
+  dependencies = ["internal/popper/gen"]
   watch = ["ent/schema/*.go", "ent/entc.go", "gqlgen.yml"]
   cmd = """
     echo "Running ent generation with go generate..."
-    go generate
-  """
-
-
-[[task]]
-  id = "newent"
-  description = "Create new ent entity"
-  type = "short"
-  cmd = """
-    go run -mod=mod entgo.io/ent/cmd/ent new --template=template/with-common.tmpl
+    go generate ./ent/...
   """
 
 [[task]]
@@ -39,7 +31,7 @@
 
 [[task]]
   id = "dev"
-  description = "Run gqlserver in dev mode"
+  description = "Run dev server"
   type = "long"
   triggers = ["gen"]
   cmd = """
