--- a/ent/migrate/tasks.toml
+++ b/ent/migrate/tasks.toml
@@ -29,15 +29,17 @@
 [[task]]
   id = "validate"
   type = "short"
+  triggers = ["lint"]
   cmd = """
   atlas migrate validate \
     --dir "file://migrations" \
-    --dev-url "sqlite://dev?mode=memory&_fk=1" \
+    --dev-url "sqlite://dev?mode=memory&_fk=1" 
   """
 
 [[task]]
   id = "apply"
   type = "short"
+  dependencies = ["validate"]
   cmd = """
   atlas migrate apply \
     --dir "file://migrations" \
