--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,18 @@
 	"features": {
 		"ghcr.io/meaningful-ooo/devcontainer-features/fish": {
 			"fisher": true
-		}	
+		},
+		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
+			"moby": true,
+			"installDockerBuildx": true,
+			"version": "latest",
+			"dockerDashComposeVersion": "v2"
+		},
+		"ghcr.io/marcozac/devcontainer-features/atlas:1": {
+			"communityEdition": true,
+			"version": "latest",
+			"goVersion": "1.20.7"
+		}
 	}
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
