--- a/tasks.toml
+++ b/tasks.toml
@@ -15,7 +15,7 @@
   id = "popdev"
   description = "Run the Popper populators"
   type = "short"
-  dependencies = ["db-clean", "gen"]
+  dependencies = ["db-clean", "popgen"]
   cmd = """
     echo "Running popper..."
     go run -mod=mod internal/popper/main.go
@@ -84,7 +84,7 @@
   cmd = """
   atlas migrate apply \
     --dir "file://ent/migrate/migrations" \
-    --url "sqlite://dev.db?_fk=1" 
+    --url "sqlite://dnd.db?_fk=1" 
   """
   
 [[task]]
@@ -102,7 +102,7 @@
   atlas migrate diff manual \
     --dir "file://ent/migrate/migrations" \
     --to "ent://ent/schema?globalid=1" \
-    --dev-url "sqlite://dev.db?mode=memory&_fk=1"
+    --dev-url "sqlite://dev?mode=memory&_fk=1"
   """
 
 [[task]]
@@ -111,7 +111,7 @@
   cmd = """
   atlas migrate lint \
     --dir "file://ent/migrate/migrations" \
-    --dev-url "sqlite://dev.db?mode=memory&_fk=1" \
+    --dev-url "sqlite://dev?mode=memory&_fk=1" \
     --latest 1
   """
 
@@ -121,7 +121,7 @@
   cmd = """
   atlas migrate validate \
     --dir "file://ent/migrate/migrations" \
-    --dev-url "sqlite://dev.db?mode=memory&_fk=1" 
+    --dev-url "sqlite://dev?mode=memory&_fk=1" 
   """
 
 [[task]]
@@ -130,7 +130,7 @@
   dependencies = ["db-backup"]
   cmd = """
   atlas schema clean \
-    --url "sqlite://dev.db?cache=shared&_fk=1" \
+    --url "sqlite://dnd.db?cache=shared&_fk=1" \
     --auto-approve
   """
 
@@ -138,10 +138,9 @@
   id = "db-backup"
   description = "Backup database"
   type = "short"
-  dependencies = ["db-lint", "db-validate"]
   cmd = """
     echo "backing up database..."
-    cp dev.db backup.db.bak
+    cp dnd.db dev-backup.db.bak
   """
 
 # ------------------------------------------------------------------------------
