--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,18 +10,12 @@
 		"ghcr.io/meaningful-ooo/devcontainer-features/fish": {
 			"fisher": true
 		},
-		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
-			"moby": true,
-			"installDockerBuildx": true,
-			"version": "latest",
-			"dockerDashComposeVersion": "v2"
-		},
-		"ghcr.io/marcozac/devcontainer-features/atlas:1": {
-			"communityEdition": true,
-			"version": "latest",
-			"goVersion": "1.20.7"
-		}
-	}
+		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {},
+		"ghcr.io/marcozac/devcontainer-features/atlas:1": {},
+		"ghcr.io/meaningful-ooo/devcontainer-features/fish:1": {},
+		"ghcr.io/devcontainers-contrib/features/protoc-asdf:1": {},
+		"ghcr.io/marcozac/devcontainer-features/protoc-gen-entgrpc:1": {}
+	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
@@ -33,5 +27,5 @@
 	// "customizations": {},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+	"remoteUser": "root"
 }
