--- a/tasks.toml
+++ b/tasks.toml
@@ -10,7 +10,19 @@
 # ------------------------------------------------------------------------------
 #     Dev Commands
 # -----------------------------------------------------------------------------
+[[task]]
+  id = "grpcserve"
+  description = "Run the grpc server"
+  type = "long"
+  dependencies = ["protogen"]
+  cmd = """
+    echo "Restoring from DB backup..."
+    cp dev.db dev-backup.db.bak
+    cp prod-backup.db.bak dev.db
 
+    echo "Running grpc server..."
+    go run -mod=mod cmd/grpcserver/main.go
+  """
 
 [[task]]
   id = "pop"
@@ -50,7 +62,7 @@
   id = "gen"
   description = "Run all code generation"
   type = "group"
-  dependencies = ["entgen", "gqlgen", "popgen"]
+  dependencies = ["entgen", "gqlgen", "popgen", "protogen"]
 
 [[task]]
   id = "entgen"
@@ -77,9 +89,10 @@
   id = "protogen"
   description = "Generate protos"
   type = "short"
+  dependencies = ["entgen"]
   cmd = """
-    echo "Running proto generation with go generate..."
-    go generate ./ent/...
+    echo "Running proto generation..."
+    go generate ./ent/proto/...
   """
 
 [[task]]
