--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,31 +1,46 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/go
 {
-	"name": "Go",
+	"name": "dndenv",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/go:1-1.20-bookworm",
+	"image": "mcr.microsoft.com/devcontainers/base:ubuntu-22.04",
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/meaningful-ooo/devcontainer-features/fish": {
 			"fisher": true
 		},
-		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {},
-		"ghcr.io/marcozac/devcontainer-features/atlas:1": {},
-		"ghcr.io/meaningful-ooo/devcontainer-features/fish:1": {},
-		"ghcr.io/devcontainers-contrib/features/protoc-asdf:1": {},
-		"ghcr.io/marcozac/devcontainer-features/protoc-gen-entgrpc:1": {}
-	},
+		"ghcr.io/marcozac/devcontainer-features/atlas:1": {
+			"communityEdition": true,
+			"version": "latest",
+			"goVersion": "1.20.7"
+		},
+		"ghcr.io/meaningful-ooo/devcontainer-features/fish:1": {
+			"fisher": true
+		},
+		"ghcr.io/devcontainers-contrib/features/protoc-asdf:1": {
+			"version": "latest"
+		},
+		"ghcr.io/marcozac/devcontainer-features/protoc-gen-entgrpc:1": {
+			"version": "latest"
+		},
+		"ghcr.io/devcontainers-contrib/features/ansible:2": {
+			"version": "latest"
+		},
+		"ghcr.io/devcontainers/features/go:1": {
+			"version": "1.20.7"
+		}
+	}
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "go version",
+	// "postCreateCommand": "ansible-playbook /root/dotfiles/ansible/playbook.yml -vv",
 
 	// Configure tool-specific properties.
 	// "customizations": {},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	"remoteUser": "root"
+	// "remoteUser": "root"
 }
