--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,46 +1,22 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/go
 {
-	"name": "dndenv",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/base:ubuntu-22.04",
-
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	"features": {
-		"ghcr.io/meaningful-ooo/devcontainer-features/fish": {
-			"fisher": true
-		},
-		"ghcr.io/marcozac/devcontainer-features/atlas:1": {
-			"communityEdition": true,
-			"version": "latest",
-			"goVersion": "1.20.7"
-		},
-		"ghcr.io/meaningful-ooo/devcontainer-features/fish:1": {
-			"fisher": true
-		},
-		"ghcr.io/devcontainers-contrib/features/protoc-asdf:1": {
-			"version": "latest"
-		},
-		"ghcr.io/marcozac/devcontainer-features/protoc-gen-entgrpc:1": {
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers-contrib/features/ansible:2": {
-			"version": "latest"
-		},
+    "build": {
+        "dockerfile": "./Dockerfile",
+        "context": "."
+    },
+    "features": {
+        "ghcr.io/devcontainers/features/common-utils:2": {
+            "installZsh": "true",
+			"configureZshAsDefaultShell": "true",
+            "username": "eric",
+            "upgradePackages": "true"
+        },
+        "ghcr.io/devcontainers/features/git:1": {
+            "version": "latest",
+            "ppa": "false"
+        },
 		"ghcr.io/devcontainers/features/go:1": {
-			"version": "1.20.7"
+			"version": "1.22"
 		}
-	}
-
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-
-	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "ansible-playbook /root/dotfiles/ansible/playbook.yml -vv",
-
-	// Configure tool-specific properties.
-	// "customizations": {},
-
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+    },
+	"remoteUser": "eric"
 }
