--- a/tasks.toml
+++ b/tasks.toml
@@ -14,10 +14,26 @@
   id = "gqlserve"
   description = "Run the gqlserver"
   type = "short"
-  triggers = ["gqlgen", "entvizfix"]
+  triggers = ["gengen", "popper"]
   cmd = """
     echo "Running gqlserver..."
     go run -mod=mod cmd/gqlserver/main.go
+  """
+
+[[task]]
+  id = "popper"
+  description = "Populate the database"
+  type = "short"
+  dependencies = ["gengen"]
+  cmd = """
+    # Check if the database is already populated
+    if [ -f dev.db ]; then
+      echo "Database already populated, skipping..."
+      exit 0
+    fi
+
+    echo "Running popper..."
+    go run -mod=mod cmd/popper/main.go
   """
 
 # ------------------------------------------------------------------------------
@@ -29,21 +45,18 @@
   type = "short"
   watch = ["ent/schema/*.go", "ent/entc.go", "gqlgen.yml"]
   cmd = """
-    echo "Running ent generation with entc..."
+    echo "Running ent generation with entc DIRECTLY..."
     go run -mod=mod ent/entc.go
   """
 
 [[task]]
-  id = "gqlgen"
+  id = "gengen"
   description = "Generate graphql"
   type = "short"
   watch = ["gqlgen.yml"]
-  dependencies = ["entgen"]
   cmd = """
-    echo "Sleeping for 3 seconds to let ent generate..."
-    sleep 3
-    echo "Running gqlgen generation with gqlgen..."
-    go run -mod=mod github.com/99designs/gqlgen
+    echo "Running code generation generation via go generate..."
+    go generate .
   """
 
 # ------------------------------------------------------------------------------
