--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -1,4 +1,5 @@
 omit_getters: true
+skip_mod_tidy: true
 schema:
   - ./gqlserver/*.graphql
 
@@ -17,6 +18,7 @@ resolver:
 # ent package. If they match it will use them, otherwise it will new ones.
 autobind:
   - github.com/ecshreve/dndgen/ent
+  - github.com/99designs/gqlgen/graphql/introspection
 
 models:
   ID:
